Fix gupnp_didl_lite_parser_parse_didl.

It should return a value.

https://bugzilla.gnome.org/show_bug.cgi?id=689094